--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.chess383</groupId>
   <artifactId>chessexception</artifactId>
-  <version>1.0.1</version>
+  <!-- version 1.1.0 == 1.0.2 -->
+  <version>1.1.0</version>
   <packaging>jar</packaging>
   <description>chess exceptions</description>
   
@@ -176,7 +177,7 @@
          <name>Joerg Dippel</name>
          <email>chess383@jdippel.de</email>
          <roles>
-             <role>architect</role>
+             <role>leadership in definitions and design of fundamental concepts</role>
              <role>developer</role>
          </roles>
          <timezone>Europe/Berlin</timezone>
