--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.chess383</groupId>
   <artifactId>chessexception</artifactId>
-  <!-- version 1.1.0 == 1.0.2 -->
-  <version>1.1.0</version>
+  <!-- version 1.2.0 == 1.1.2 -->
+  <version>1.2.0</version>
   <packaging>jar</packaging>
   <description>chess exceptions</description>
   
@@ -15,31 +15,51 @@
         <java.target.version>11</java.target.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
+        
+        <junit-jupiter-api.version>5.7.0</junit-jupiter-api.version>
+        <junit-jupiter-engine.version>5.7.0</junit-jupiter-engine.version>
+        <junit-jupiter-params.version>5.7.0</junit-jupiter-params.version>
+        <assertj-core.version>3.18.1</assertj-core.version>
+        
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
+        <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
+        <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
+        <requireMavenVersion.version>3.2.5</requireMavenVersion.version>
+        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+        <maven-site-plugin.version>3.9.1</maven-site-plugin.version>
+        <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
+        <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
+        <maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
+        <maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
+        
+        <maven-project-info-reports-plugin.version>3.1.1</maven-project-info-reports-plugin.version>
+        <versions-maven-plugin.version>2.8.1</versions-maven-plugin.version>
   </properties>
 	
   <dependencies>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
-        <version>5.5.2</version>
+        <version>${junit-jupiter-api.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.5.2</version>
+        <version>${junit-jupiter-engine.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-params</artifactId>
-        <version>5.5.2</version>
+        <version>${junit-jupiter-params.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
-        <version>3.14.0</version>
+        <version>${assertj-core.version}</version>
         <scope>test</scope>
       </dependency>
   </dependencies>
@@ -52,7 +72,7 @@
                    You are highly encouraged to change these defaults by setting source and target -->
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
-              <version>3.8.1</version>
+              <version>${maven-compiler-plugin.version}</version>
               <configuration>
                   <source>${java.src.version}</source>
                   <target>${java.target.version}</target>
@@ -61,7 +81,7 @@
           <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-jar-plugin</artifactId>
-             <version>3.2.0</version>
+             <version>${maven-jar-plugin.version}</version>
              <configuration>
                <archive>
                   <manifest>
@@ -78,13 +98,13 @@
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-failsafe-plugin</artifactId>
-              <version>3.0.0-M5</version>
+              <version>${maven-failsafe-plugin.version}</version>
           </plugin>
           <plugin>
              <!-- minimal maven version is required by versions-maven-plugin -->
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-enforcer-plugin</artifactId>
-             <version>3.0.0-M3</version>
+             <version>${maven-enforcer-plugin.version}</version>
              <executions>
                 <execution>
                    <id>enforce-maven</id>
@@ -94,7 +114,7 @@
                    <configuration>
                       <rules>
                          <requireMavenVersion>
-                            <version>3.2.5</version>
+                            <version>${requireMavenVersion.version}</version>
                          </requireMavenVersion>
                       </rules>    
                    </configuration>
@@ -104,7 +124,7 @@
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
-              <version>3.0.0-M5</version>
+              <version>${maven-surefire-plugin.version}</version>
               <configuration>
                 <includes>
                     <include>**/*.java</include>
@@ -116,31 +136,31 @@
                  mvn test -->
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-site-plugin</artifactId>
-            <version>3.9.1</version>
+            <version>${maven-site-plugin.version}</version>
           </plugin>
           <plugin>
              <!-- updated version is required by versions-maven-plugin -->
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-clean-plugin</artifactId>
-             <version>3.1.0</version>
+             <version>${maven-clean-plugin.version}</version>
           </plugin>
           <plugin>
              <!-- updated version is required by versions-maven-plugin -->
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-resources-plugin</artifactId>
-             <version>3.2.0</version>
+             <version>${maven-resources-plugin.version}</version>
           </plugin>
           <plugin>
              <!-- updated version is required by versions-maven-plugin -->
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-deploy-plugin</artifactId>
-             <version>3.0.0-M1</version>
+             <version>${maven-deploy-plugin.version}</version>
           </plugin>
           <plugin>
              <!-- updated version is required by versions-maven-plugin -->
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-install-plugin</artifactId>
-             <version>3.0.0-M1</version>
+             <version>${maven-install-plugin.version}</version>
           </plugin>
       </plugins>
   </build>
@@ -152,14 +172,14 @@
              mvn site -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>${maven-project-info-reports-plugin.version}</version>
       </plugin>
       <plugin>
         <!-- This plugin is used to check the plugin updates, just call
              mvn versions:display-plugin-updates -->
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
-        <version>2.8.1</version>
+        <version>${versions-maven-plugin.version}</version>
       </plugin>
     </plugins>
   </reporting>
