--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,5 +15,5 @@ jobs:
         java-version: '13'
     - name: Build with Maven
       run: |
-        chmod +x *.sh
+        chmod +x mvnw
         ./mvnw -B clean install --file pom.xml
